<!--
  Copyright 2017 realglobe Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>
    <string name="app_name">SugoActorCall</string>
    <string name="button_call">通報</string>
    <string name="key_actor_suffix">actor_suffix</string>
    <string name="key_phone_number">phone_number</string>
    <string name="button_talk">通報先と話す</string>
    <string name="button_reset">リセット</string>
    <string name="key_report_interval">report_interval</string>
    <string name="key_server">server</string>
    <string name="default_server">https://edac.online/jissho3/sugos/report/</string>
    <string name="actor_prefix">qq:reporter:</string>
    <string name="default_actor_suffix">1</string>
    <string name="name">reporter</string>
    <string name="description">Android の通報用 Actor</string>
    <string name="module">AndroidCall</string>
    <string name="default_phone_number" />
    <string name="item_settings">設定</string>
    <string name="item_allow">許可</string>
    <string name="message_called">通報しました</string>
</resources>
